# rack-cli

./: .env  .gitignore  README.md  api_client.py  mock_api.py  pyproject.toml  rack_cli.py  requirements.txt  utils.py
commands/: list_hosts.py  list_racks.py  list_switches.py  lookup.py  rack_contents.py  summary.py
data/: hosts.csv  mock_hosts.csv  mock_racks.csv  mock_switches.csv
